--- a/src/home.html
+++ b/src/home.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <a href="home.html"> <img src="/images/cherry-blossom.png" alt="cherry-blossom logo"> </a>
+        <a href="home.html"> <img src="/Images/cherry-blossom.png" alt="cherry-blossom logo"> </a>
         <ul>
             <li><a href="#1">Sơ cấp</a></li>
             <li><a href="#2">Minna</a></li>
