update first css

--- a/src/home.html
+++ b/src/home.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Japanese learning </title>
+    <link rel="stylesheet" href="/CSS/home.css">
 </head>
 <body>
     <nav>
-        <a href="home.html"> <img src="/Images/cherry-blossom.png" alt="cherry-blossom logo"> </a>
+        <a href="home.html"> <img class="logo" src="/Images/cherry-blossom.png" alt="cherry-blossom logo"> </a>
         <ul>
-            <li><a href="#1">Sơ cấp</a></li>
+            <li>
+                <a href="#1">Sơ cấp</a>
+                <ul>
+                    <li><a href="#11">Tiếng Nhật vỡ lòng</a></li>
+                    <li><a href="#12">Tiếng Nhật giao tiếp</a></li>
+                    <li><a href="#13">Tiếng Nhật theo chủ đề</a></li>
+                    <li><a href="#14">Shadowing tiếng Nhật</a></li>
+                </ul>
+            </li>
             <li><a href="#2">Minna</a></li>
         </ul>
     </nav>
